<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".fall"
    android:background="@drawable/androidbackground">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnSet"
        android:id="@+id/btnSet"
        android:background="@drawable/shape"
        android:textSize="16sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnRecord"
        android:id="@+id/btnRecord"
        android:background="@drawable/shape"
        android:textSize="16sp"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/btnSet"
        android:layout_alignLeft="@+id/btnSet"
        android:layout_alignStart="@+id/btnSet" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnBlue"
        android:id="@+id/btnBlue"
        android:background="@drawable/shape"
        android:textSize="16sp"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/btnRecord"
        android:layout_alignLeft="@+id/btnRecord"
        android:layout_alignStart="@+id/btnRecord" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnAbout"
        android:id="@+id/btnAbout"
        android:background="@drawable/shape"
        android:textSize="16sp"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/btnBlue"
        android:layout_alignLeft="@+id/btnBlue"
        android:layout_alignStart="@+id/btnBlue" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnChangetype"
        android:id="@+id/btnChangetype"
        android:background="@drawable/shapeelse"
        android:layout_marginLeft="50dp"
        android:layout_marginStart="50dp"
        android:layout_above="@+id/btnRecord"
        android:layout_toRightOf="@+id/btnSet"
        android:layout_toEndOf="@+id/btnSet" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/tvfall1"
        android:id="@+id/tvfall1"
        android:layout_alignTop="@+id/btnRecord"
        android:layout_alignLeft="@+id/btnChangetype"
        android:layout_alignStart="@+id/btnChangetype" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/tvfall2"
        android:id="@+id/tvfall2"
        android:layout_below="@+id/tvfall1"
        android:layout_alignLeft="@+id/tvfall1"
        android:layout_alignStart="@+id/tvfall1" />
</RelativeLayout>
